[gd_scene load_steps=5 format=2]

[ext_resource path="res://minigames/Rain Trash/assets/Player/Female/NinalL_Amarillo_0001.png" type="Texture" id=1]
[ext_resource path="res://minigames/Rain Trash/Player/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.0367, 17.485 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.1181, 2.64111 )

[node name="Player" type="StaticBody2D"]
position = Vector2( 960, 980 )
scale = Vector2( 2, 2 )
collision_layer = 32
collision_mask = 32
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2.52264, -15.1361 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8.40897 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.466431, -28.8863 )
shape = SubResource( 2 )

[node name="SwipeTimer" type="Timer" parent="."]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="timeout" from="SwipeTimer" to="." method="_on_SwipeTimer_timeout"]
